chore: replace toList with collect(Collectors.toList())